--- a/extension/src/options/options.html
+++ b/extension/src/options/options.html
@@ -302,12 +302,12 @@
                 </div>
                 <div class="section-content">
                     <div class="form-group">
-                        <label class="supertabs-label" for="phi3-api-key">Chave API PHI-3</label>
-                        <div class="password-input-group">
-                            <input type="password" id="phi3-api-key" class="supertabs-input" placeholder="Digite a chave API">
-                            <button type="button" class="password-toggle" onclick="togglePassword('phi3-api-key')">👁️</button>
+                        <label class="supertabs-label" for="phi4-api-key">Chave API PHI-4</label>
+                        <div class="input-group">
+                            <input type="password" id="phi4-api-key" class="supertabs-input" placeholder="Digite a chave API">
+                            <button type="button" class="password-toggle" onclick="togglePassword('phi4-api-key')">👁️</button>
                         </div>
-                        <div class="form-description">Chave para o modelo PHI-3 (padrão)</div>
+                        <div class="form-description">Chave para o modelo PHI-4 (padrão)</div>
                     </div>
                     
                     <div class="form-group">
