--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -8,103 +8,147 @@
     <link rel="stylesheet" href="../content/nifi-icons.css">
     <style>
         body {
-            width: 350px;
-            min-height: 400px;
+            width: 320px;
+            min-height: 480px;
+            max-height: 600px;
             margin: 0;
             padding: 0;
             font-family: var(--nifi-font-family);
-            font-size: var(--nifi-font-size-base);
+            font-size: var(--nifi-font-size-small);
             background-color: var(--nifi-background);
+            overflow-y: auto;
+        }
+
+        /* Scrollbar estilizado para popup */
+        body::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        body::-webkit-scrollbar-track {
+            background: #f5f7f9;
+        }
+
+        body::-webkit-scrollbar-thumb {
+            background: #7d98a8;
+            border-radius: 4px;
+        }
+
+        body::-webkit-scrollbar-thumb:hover {
+            background: #5b7a8a;
         }
 
         .popup-header {
-            background: linear-gradient(135deg, var(--nifi-primary-blue), var(--nifi-secondary-blue));
-            color: white;
-            padding: var(--nifi-spacing-md);
+            background: #7d98a8;
+            color: #ffffff;
+            padding: 12px;
             text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border-bottom: 2px solid #5b7a8a;
         }
 
         .popup-header h1 {
             margin: 0;
-            font-size: var(--nifi-font-size-header);
+            font-size: 18px;
             font-weight: var(--nifi-font-weight-medium);
+            color: #ffffff;
         }
 
         .popup-header .version {
-            font-size: var(--nifi-font-size-small);
-            opacity: 0.8;
-            margin-top: var(--nifi-spacing-xs);
+            font-size: 11px;
+            opacity: 0.9;
+            margin-top: 4px;
+            color: #c4d3db;
         }
 
         .popup-content {
-            padding: var(--nifi-spacing-md);
+            padding: 12px;
         }
 
+        /* Status compacto com ícones */
         .status-section {
-            margin-bottom: var(--nifi-spacing-lg);
+            margin-bottom: 16px;
+            background: var(--nifi-gray-lighter);
+            border-radius: var(--nifi-border-radius);
+            padding: 8px 12px;
         }
 
-        .status-indicator {
+        .status-section h3 {
+            margin: 0 0 8px 0;
+            font-size: 12px;
+            font-weight: var(--nifi-font-weight-medium);
+            color: var(--nifi-gray-dark);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .status-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 8px;
+        }
+
+        .status-item {
             display: flex;
             align-items: center;
-            padding: var(--nifi-spacing-sm);
-            border-radius: var(--nifi-border-radius);
-            margin-bottom: var(--nifi-spacing-sm);
+            gap: 6px;
+            padding: 6px 8px;
+            background: white;
+            border-radius: 4px;
+            font-size: 11px;
         }
 
-        .status-indicator.connected {
-            background-color: rgba(92, 184, 92, 0.1);
-            border: 1px solid var(--nifi-success-green);
+        .status-icon {
+            font-size: 16px;
+            width: 20px;
+            text-align: center;
+        }
+
+        .status-icon.connected {
             color: var(--nifi-success-green);
         }
 
-        .status-indicator.disconnected {
-            background-color: rgba(217, 83, 79, 0.1);
-            border: 1px solid var(--nifi-danger-red);
+        .status-icon.disconnected {
             color: var(--nifi-danger-red);
         }
 
-        .status-indicator.inactive {
-            background-color: rgba(240, 173, 78, 0.1);
-            border: 1px solid var(--nifi-warning-orange);
+        .status-icon.inactive {
             color: var(--nifi-warning-orange);
         }
 
-        .status-dot {
-            width: 8px;
-            height: 8px;
-            border-radius: 50%;
-            margin-right: var(--nifi-spacing-sm);
-        }
-
-        .status-dot.connected {
-            background-color: var(--nifi-success-green);
-        }
-
-        .status-dot.disconnected {
-            background-color: var(--nifi-danger-red);
-        }
-
-        .status-dot.inactive {
-            background-color: var(--nifi-warning-orange);
+        .status-text {
+            flex: 1;
+            font-weight: var(--nifi-font-weight-medium);
+            color: var(--nifi-gray-dark);
         }
 
         .quick-actions {
-            margin-bottom: var(--nifi-spacing-lg);
+            margin-bottom: 16px;
+        }
+
+        .quick-actions h3 {
+            margin: 0 0 8px 0;
+            font-size: 12px;
+            font-weight: var(--nifi-font-weight-medium);
+            color: var(--nifi-gray-dark);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .action-grid {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: var(--nifi-spacing-sm);
-            margin-bottom: var(--nifi-spacing-md);
+            grid-template-columns: repeat(4, 1fr);
+            gap: 8px;
+            margin-bottom: 8px;
         }
 
         .action-btn {
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: var(--nifi-spacing-md);
+            padding: 10px 4px;
             border: 1px solid var(--nifi-border);
             border-radius: var(--nifi-border-radius);
             background-color: var(--nifi-background);
@@ -116,13 +160,15 @@
 
         .action-btn:hover {
             background-color: var(--nifi-gray-lighter);
-            border-color: var(--nifi-primary-blue);
+            border-color: #7d98a8;
+            transform: translateY(-2px);
+            box-shadow: 0 2px 8px rgba(125, 152, 168, 0.2);
         }
 
         .action-btn .icon {
             font-size: 20px;
-            margin-bottom: var(--nifi-spacing-xs);
-            color: var(--nifi-primary-blue);
+            margin-bottom: 4px;
+            color: #7d98a8;
         }
 
         .action-btn .icon i {
@@ -130,17 +176,32 @@
         }
 
         .action-btn .label {
-            font-size: var(--nifi-font-size-small);
+            font-size: 10px;
             text-align: center;
             font-weight: var(--nifi-font-weight-medium);
+            line-height: 1.2;
+        }
+
+        .quick-settings {
+            margin-bottom: 12px;
+        }
+
+        .quick-settings h3 {
+            margin: 0 0 8px 0;
+            font-size: 12px;
+            font-weight: var(--nifi-font-weight-medium);
+            color: var(--nifi-gray-dark);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .settings-toggle {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: var(--nifi-spacing-sm) 0;
+            padding: 8px 0;
             border-bottom: 1px solid var(--nifi-gray-lighter);
+            font-size: 12px;
         }
 
         .settings-toggle:last-child {
@@ -149,16 +210,17 @@
 
         .toggle-switch {
             position: relative;
-            width: 44px;
-            height: 24px;
+            width: 36px;
+            height: 20px;
             background-color: var(--nifi-gray-light);
-            border-radius: 12px;
+            border-radius: 10px;
             cursor: pointer;
             transition: var(--nifi-transition);
+            flex-shrink: 0;
         }
 
         .toggle-switch.active {
-            background-color: var(--nifi-primary-blue);
+            background-color: #5b7a8a;
         }
 
         .toggle-switch::after {
@@ -166,33 +228,36 @@
             position: absolute;
             top: 2px;
             left: 2px;
-            width: 20px;
-            height: 20px;
+            width: 16px;
+            height: 16px;
             background-color: white;
             border-radius: 50%;
             transition: var(--nifi-transition);
+            box-shadow: 0 1px 3px rgba(0,0,0,0.2);
         }
 
         .toggle-switch.active::after {
-            left: 22px;
+            left: 18px;
         }
 
         .footer-links {
-            margin-top: var(--nifi-spacing-lg);
+            margin-top: 12px;
             text-align: center;
             border-top: 1px solid var(--nifi-gray-lighter);
-            padding-top: var(--nifi-spacing-md);
+            padding-top: 12px;
         }
 
         .footer-links a {
-            color: var(--nifi-primary-blue);
+            color: #7d98a8;
             text-decoration: none;
-            margin: 0 var(--nifi-spacing-sm);
-            font-size: var(--nifi-font-size-small);
+            margin: 0 6px;
+            font-size: 11px;
+            font-weight: var(--nifi-font-weight-medium);
         }
 
         .footer-links a:hover {
             text-decoration: underline;
+            color: #5b7a8a;
         }
 
         .hidden {
@@ -207,68 +272,66 @@
     </div>
 
     <div class="popup-content">
-        <!-- Status Section -->
+        <!-- Status Section - Compacto com ícones -->
         <div class="status-section">
-            <h3>Status</h3>
-            <div id="nifi-status" class="status-indicator disconnected">
-                <div class="status-dot disconnected"></div>
-                <span>Conectando ao NiFi...</span>
-            </div>
-            <div id="ai-status" class="status-indicator inactive">
-                <div class="status-dot inactive"></div>
-                <span>IA não configurada</span>
+            <div class="status-grid">
+                <div class="status-item" id="nifi-status-item">
+                    <div class="status-icon disconnected" id="nifi-status-icon">
+                        <i class="fa fa-times-circle"></i>
+                    </div>
+                    <div class="status-text">NiFi</div>
+                </div>
+                <div class="status-item" id="ai-status-item">
+                    <div class="status-icon inactive" id="ai-status-icon">
+                        <i class="fa fa-exclamation-circle"></i>
+                    </div>
+                    <div class="status-text">IA</div>
+                </div>
             </div>
         </div>
 
-        <!-- Quick Actions -->
+        <!-- Quick Actions - Grid 4 colunas -->
         <div class="quick-actions">
             <h3>Ações Rápidas</h3>
             <div class="action-grid">
                 <div class="action-btn" id="toggle-sidebar">
-                    <div class="icon"><i class="fa fa-bars" aria-hidden="true"></i></div>
-                    <div class="label">Toggle Sidebar</div>
+                    <div class="icon"><i class="fa fa-bars"></i></div>
+                    <div class="label">Sidebar</div>
                 </div>
                 <div class="action-btn" id="open-expression-generator">
-                    <div class="icon"><i class="fa fa-code" aria-hidden="true"></i></div>
-                    <div class="label">Expression Generator</div>
+                    <div class="icon"><i class="fa fa-code"></i></div>
+                    <div class="label">Expression</div>
                 </div>
                 <div class="action-btn" id="align-components">
-                    <div class="icon"><i class="fa fa-align-left" aria-hidden="true"></i></div>
-                    <div class="label">Auto Align</div>
+                    <div class="icon"><i class="fa fa-align-justify"></i></div>
+                    <div class="label">Alinhar</div>
                 </div>
                 <div class="action-btn" id="open-settings">
-                    <div class="icon"><i class="fa fa-cog" aria-hidden="true"></i></div>
-                    <div class="label">Configurações</div>
+                    <div class="icon"><i class="fa fa-cog"></i></div>
+                    <div class="label">Config</div>
                 </div>
             </div>
         </div>
 
-        <!-- Quick Settings -->
+        <!-- Quick Settings - Compacto -->
         <div class="quick-settings">
-            <h3>Configurações Rápidas</h3>
+            <h3>Configurações</h3>
             <div class="settings-toggle">
-                <span>Abertura Automática</span>
+                <span>Auto-Abrir</span>
                 <div class="toggle-switch" id="auto-open-toggle"></div>
             </div>
             <div class="settings-toggle">
-                <span>Alinhamento Automático</span>
+                <span>Alinhamento</span>
                 <div class="toggle-switch" id="alignment-toggle"></div>
             </div>
             <div class="settings-toggle">
-                <span>Expression Language</span>
+                <span>Expression</span>
                 <div class="toggle-switch" id="expression-toggle"></div>
             </div>
             <div class="settings-toggle">
-                <span>Modo Debug</span>
+                <span>Debug</span>
                 <div class="toggle-switch" id="debug-toggle"></div>
             </div>
-        </div>
-
-        <!-- Footer -->
-        <div class="footer-links">
-            <a href="#" id="open-full-settings">Configurações Completas</a>
-            <a href="#" id="view-logs">Ver Logs</a>
-            <a href="#" id="export-settings">Exportar</a>
         </div>
     </div>
 
